--- a/assets/sass/layout/_containers.scss
+++ b/assets/sass/layout/_containers.scss
@@ -1,7 +1,7 @@
-/** @format */
-/** All prime container properties */
+/**
+ * All prime container properties
+ *
+ * @format
+ */
 
 @use '../abstracts' as *;
-// prime page layout
-
-//--------------------------------------------
