--- a/assets/sass/abstracts/_mixins.sass
+++ b/assets/sass/abstracts/_mixins.sass
@@ -1,5 +1,5 @@
 // for flex containers only
-=center($value, $value2)
+@mixin center($value, $value2)
 	display: flex
 	justify-content: $value
 	align-items: $value2
@@ -10,34 +10,15 @@
 	border-color: $color
 	border-radius: $rad
 
-=grid($cols, $mgn)
-	float: left
-	margin-right: $mgn
-	margin-bottom: $mgn
-	width: (100 - ($cols - 1) * $mgn) / $cols
-
-	&:nth-child(#{$cols}n)
-		margin-right: 0
-
-=simple-grad($color1, $color2)
+@mixin simple-grad($color1, $color2)
 	background: linear-gradient($color1, $color2)
 
 @mixin angle-grad($angle, $color, $color1)
 	background: linear-gradient($angle, $color, $color1)
 
 
-=height1($size)
+@mixin height1($size)
 	height: $size
-
-@function set-text-color($color)
-	@if(lightness($color) > 50)
-		@return $gen26
-	@else
-		@return $gen22
-
-=set-background($color)
-	background-color: $color
-	color: set-text-color($color)
 
 @mixin round($radius)
 	border-radius: $radius
