--- a/application/views/menus/menu.html
+++ b/application/views/menus/menu.html
@@ -1,8 +1,8 @@
 <!-- @format -->
-<span class="title"><?php echo $header;?></span>
+<span class="header-title"><?php echo $header;?></span>
 <span>
-	<ul>
-		<li><a href="/">Home</a></li>
-		<li><a href="#">Second</a></li>
+	<ul class="header-menu">
+		<li class="item upper"><a href="http://oblivion/">Home</a></li>
+		<li class="item upper"><a href="#">Second</a></li>
 	</ul>
 </span>
