--- a/assets/sass/classes/_lists.sass
+++ b/assets/sass/classes/_lists.sass
@@ -2,7 +2,12 @@
 
 @use '../abstracts' as *
 
-
 .item
 	padding-right: 1rem
 	font-size: $font-size-base + 2
+
+.upper
+	display: inline
+
+.header-title
+	font-size: 2.25rem
