--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,628 @@
-:after,:before{box-sizing:inherit}*,:after,:before{box-sizing:border-box}blockquote,body,dd,dl,figure,h1,h2,h3,h4,p{margin:0}ol[role=list],ul[role=list]{list-style:none}html:focus-within{scroll-behavior:smooth}a:not([class]){text-decoration-skip-ink:auto}img,picture{max-width:100%;display:block}button,input,select,textarea{font:inherit}@media (prefers-reduced-motion:reduce){html:focus-within{scroll-behavior:auto}*,:after,:before{animation-duration:0.01ms!important;animation-iteration-count:1!important;transition-duration:0.01ms!important;scroll-behavior:auto!important}}body,html{box-sizing:border-box;margin:0;padding:0;scroll-behavior:smooth;font-size:16px;line-height:1.5}::-webkit-scrollbar{width:1.5em}::-webkit-scrollbar-track{background:#fad590;border-radius:100vw;margin-block:0.5em}::-webkit-scrollbar-thumb{background:#f8740b;border-radius:100vw}@supports (scrollbar-color:#6724e1 #7073e2){*{scrollbar-color:#6724e1 #7073e2;scrollbar-width:auto}}p{margin-top:0.75rem}blockquote{margin-left:2rem;border-left:1px solid #d2691e;padding-left:1rem}a{color:#8c353d;text-decoration:none}a:visited{color:#841B2D}a:hover{color:hsl(0,53.25%,54.71%)}.inline-list{display:inline}header a:link{padding:5px 8px}h1,h2{letter-spacing:2px}strong{letter-spacing:2px;font-weight:600}code{font-family:"Courier New","Courier","Lucida Sans Typewriter","Lucida Typewriter",monospace;font-weight:300;font-size:1rem}h1{font-size:56px;margin-bottom:0.75rem}h2{font-size:40px}h3{font-size:32px}h4{font-size:24px;margin-bottom:0.75rem}h5{font-size:20px;margin-bottom:0.75rem}h6{font-size:16px;margin-bottom:0.75rem}.fz75{font-size:0.75rem}button{font-family:"Consolas","monaco",monospace;font-size:18px;color:#ECD0C2;padding:8px 15px;background:#4A85D1;border-radius:5px}button:hover{background:#6495ed;color:#36013f;box-shadow:2px 2px 2px #7073e2}form{margin-left:1rem}input[type=checkbox]{width:15px;height:15px;background:white;position:relative;border-radius:5px}input[type=checkbox]:checked{background-color:green}label{display:block}.input-small{width:10%}.input-date{width:15.625%}.input-med{width:33.3333333333%}.input-med-lg{width:50%}.input-large{width:75.7575757576%}.input-full{width:100%}.fs-1{font-size:0.5vw}.fs-2{font-size:1vw}.fs-3{font-size:1.5vw}.fs-4{font-size:2vw}.fs-5{font-size:2.5vw}.fs-6{font-size:3vw}.fs-7{font-size:3.5vw}.fs-8{font-size:4vw}.fs-9{font-size:4.5vw}.fs-10{font-size:5vw}.bold-1{font-weight:100}.bold-2{font-weight:200}.bold-3{font-weight:300}.bold-4{font-weight:400}.bold-5{font-weight:500}.bold-6{font-weight:600}.bold-7{font-weight:700}.bold-8{font-weight:800}.bold-9{font-weight:900}.margin-1{margin:1px}.margin-2{margin:2px}.margin-3{margin:3px}.margin-4{margin:4px}.margin-5{margin:5px}.margin-6{margin:6px}.margin-7{margin:7px}.margin-8{margin:8px}.margin-9{margin:9px}.margin-10{margin:10px}.padding-1{padding:1rem}.padding-2{padding:2rem}.padding-3{padding:3rem}.padding-4{padding:4rem}.padding-5{padding:5rem}.padding-6{padding:6rem}.padding-7{padding:7rem}.padding-8{padding:8rem}.padding-9{padding:9rem}.padding-10{padding:10rem}.item{padding-right:1rem;font-size:18px}.underline{border-bottom:1px solid #000}.error{color:#841B2D}.center-align{text-align:center}.left-align{text-align:left}.right-align{text-align:right}.text-small{font-size:0.85rem}.height1{height:6rem}.hidden{display:none}.ital{font-style:italic;font-variant:small-caps}.current{background:#e9967a;color:#140FA9!important}.white{color:#f5f5f5}.dark{background-color:#381B6C;color:white}.calendar{background:#CFC79E;padding:1em;border:2px solid #000;width:100%}.day{padding:2px;height:10em;vertical-align:top;width:14.2857142857%}.highlight{font-family:"Lucida Grande","Lucida Sans Unicode","Geneva","Verdana",sans-serif;font-size:1.1em;font-weight:bold;color:#1864ab;background:#FE5532}.day_num{color:#00007F;vertical-align:top;font-family:"Consolas","monaco",monospace}.content{color:#211E9C}th{text-align:center}.coloring{background:#1313be}.size{color:#000;text-align:center}.thheader{color:#1864ab}
+/**
+ * /* Config
+ *
+ * @format
+ */
+/** @format */ /** @format */ /**
+ * Box sizing rules
+ *
+ * @format
+ */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+ul[role=list],
+ol[role=list] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+/* body */
+html,
+body {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+::-webkit-scrollbar {
+  width: 1.5em;
+}
+
+::-webkit-scrollbar-track {
+  background: #fad590;
+  border-radius: 100vw;
+  margin-block: 0.5em;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #f8740b;
+  border-radius: 100vw;
+}
+
+@supports (scrollbar-color: #6724e1 #7073e2) {
+  * {
+    scrollbar-color: #6724e1 #7073e2;
+    scrollbar-width: auto;
+  }
+}
+/* Elements */
+p {
+  margin-top: 0.75rem;
+}
+
+blockquote {
+  margin-left: 2rem;
+  border-left: 1px solid #d2691e;
+  padding-left: 1rem;
+}
+
+/* Links */
+a {
+  color: #8c353d;
+  text-decoration: none;
+}
+a:visited {
+  color: #841B2D;
+}
+a:hover {
+  color: hsl(0, 53.25%, 54.71%);
+}
+
+.inline-list {
+  display: inline;
+}
+
+header a:link {
+  padding: 5px 8px;
+}
+
+/* typography */
+h1,
+h2 {
+  letter-spacing: 2px;
+}
+
+strong {
+  letter-spacing: 2px;
+  font-weight: 600;
+}
+
+code {
+  font-family: "Courier New", "Courier", "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+  font-weight: 300;
+  font-size: 1rem;
+}
+
+h1 {
+  font-size: 56px;
+  margin-bottom: 0.75rem;
+}
+
+h2 {
+  font-size: 40px;
+}
+
+h3 {
+  font-size: 32px;
+}
+
+h4 {
+  font-size: 24px;
+  margin-bottom: 0.75rem;
+}
+
+h5 {
+  font-size: 20px;
+  margin-bottom: 0.75rem;
+}
+
+h6 {
+  font-size: 16px;
+  margin-bottom: 0.75rem;
+}
+
+.fz75 {
+  font-size: 0.75rem;
+}
+
+button {
+  font-family: "Consolas", "monaco", monospace;
+  font-size: 18px;
+  color: #ECD0C2;
+  padding: 8px 15px;
+  background: #4A85D1;
+  border-radius: 5px;
+}
+button:hover {
+  background: #6495ed;
+  color: #36013f;
+  box-shadow: 2px 2px 2px #7073e2;
+}
+
+form {
+  margin-left: 1rem;
+}
+
+input[type=checkbox] {
+  width: 15px;
+  height: 15px;
+  background: white;
+  position: relative;
+  border-radius: 5px;
+}
+
+input[type=checkbox]:checked {
+  background-color: green;
+}
+
+label {
+  display: block;
+}
+
+.input-small {
+  width: 10%;
+}
+
+.input-date {
+  width: 15.625%;
+}
+
+.input-med {
+  width: 33.3333333333%;
+}
+
+.input-med-lg {
+  width: 50%;
+}
+
+.input-large {
+  width: 75.7575757576%;
+}
+
+.input-full {
+  width: 100%;
+}
+
+.fs-1 {
+  font-size: 0.5vw;
+}
+
+.fs-2 {
+  font-size: 1vw;
+}
+
+.fs-3 {
+  font-size: 1.5vw;
+}
+
+.fs-4 {
+  font-size: 2vw;
+}
+
+.fs-5 {
+  font-size: 2.5vw;
+}
+
+.fs-6 {
+  font-size: 3vw;
+}
+
+.fs-7 {
+  font-size: 3.5vw;
+}
+
+.fs-8 {
+  font-size: 4vw;
+}
+
+.fs-9 {
+  font-size: 4.5vw;
+}
+
+.fs-10 {
+  font-size: 5vw;
+}
+
+.bold-1 {
+  font-weight: 100;
+}
+
+.bold-2 {
+  font-weight: 200;
+}
+
+.bold-3 {
+  font-weight: 300;
+}
+
+.bold-4 {
+  font-weight: 400;
+}
+
+.bold-5 {
+  font-weight: 500;
+}
+
+.bold-6 {
+  font-weight: 600;
+}
+
+.bold-7 {
+  font-weight: 700;
+}
+
+.bold-8 {
+  font-weight: 800;
+}
+
+.bold-9 {
+  font-weight: 900;
+}
+
+.margin-1 {
+  margin: 1px;
+}
+
+.margin-2 {
+  margin: 2px;
+}
+
+.margin-3 {
+  margin: 3px;
+}
+
+.margin-4 {
+  margin: 4px;
+}
+
+.margin-5 {
+  margin: 5px;
+}
+
+.margin-6 {
+  margin: 6px;
+}
+
+.margin-7 {
+  margin: 7px;
+}
+
+.margin-8 {
+  margin: 8px;
+}
+
+.margin-9 {
+  margin: 9px;
+}
+
+.margin-10 {
+  margin: 10px;
+}
+
+.padding-1 {
+  padding: 1rem;
+}
+
+.padding-2 {
+  padding: 2rem;
+}
+
+.padding-3 {
+  padding: 3rem;
+}
+
+.padding-4 {
+  padding: 4rem;
+}
+
+.padding-5 {
+  padding: 5rem;
+}
+
+.padding-6 {
+  padding: 6rem;
+}
+
+.padding-7 {
+  padding: 7rem;
+}
+
+.padding-8 {
+  padding: 8rem;
+}
+
+.padding-9 {
+  padding: 9rem;
+}
+
+.padding-10 {
+  padding: 10rem;
+}
+
+/*list properties */
+.item {
+  padding-right: 1rem;
+  font-size: 18px;
+}
+
+.upper {
+  display: inline;
+}
+
+.header-title {
+  font-size: 2.25rem;
+}
+
+/*Cards */
+/*Common*/
+.underline {
+  border-bottom: 1px solid #000;
+}
+
+.error {
+  color: #841B2D;
+}
+
+.center-align {
+  text-align: center;
+}
+
+.left-align {
+  text-align: left;
+}
+
+.right-align {
+  text-align: right;
+}
+
+.text-small {
+  font-size: 0.85rem;
+}
+
+.height1 {
+  height: 6rem;
+}
+
+.hidden {
+  display: none;
+}
+
+.ital {
+  font-style: italic;
+  font-variant: small-caps;
+}
+
+.current {
+  background: #e9967a;
+  color: #140FA9 !important;
+}
+
+.white {
+  color: #f5f5f5;
+}
+
+/* main theme colors */
+.dark {
+  background-color: #381B6C;
+  color: white;
+}
+
+/**
+ * All prime container properties
+ *
+ * @format
+ */
+.prime {
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 0.5fr repeat(4, 1fr);
+  width: 90%;
+  margin: 0 auto;
+  height: 100vh;
+}
+
+.top {
+  grid-column: 1/7;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 0 0 15px 15px;
+}
+
+#left-column {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+
+#main {
+  grid-column: 2/7;
+  grid-row: 2/3;
+  display: grid;
+  grid-template-columns: subgrid;
+}
+
+.subg-1 {
+  grid-column: 1/4;
+  border: 1px dotted black;
+}
+
+.subg-2 {
+  grid-column: 4/7;
+  border: 1px dotted black;
+}
+
+#recap {
+  grid-column: 1/7;
+  grid-row: 3/4;
+}
+
+#main-footer {
+  grid-column: 1/7;
+  grid-row: 4/5;
+  display: grid;
+  grid-template-columns: subgrid;
+}
+
+.one {
+  grid-column: 1/2;
+}
+
+.two {
+  grid-column: 2/3;
+}
+
+.three {
+  grid-column: 3/4;
+}
+
+.four {
+  grid-column: 4/5;
+}
+
+.five {
+  grid-column: 5/6;
+}
+
+.six {
+  grid-column: 6/7;
+}
+
+.bottoms {
+  grid-column: 1/7;
+  grid-row: 5/6;
+}
+
+/* Calendar if needed */
+.calendar {
+  background: #CFC79E;
+  padding: 1em;
+  border: 2px solid #000;
+  width: 100%;
+}
+
+.day {
+  padding: 2px;
+  height: 10em;
+  vertical-align: top;
+  width: 14.2857142857%;
+}
+
+.highlight {
+  font-family: "Lucida Grande", "Lucida Sans Unicode", "Geneva", "Verdana", sans-serif;
+  font-size: 1.1em;
+  font-weight: bold;
+  color: #1864ab;
+  background: #FE5532;
+}
+
+.day_num {
+  color: #00007F;
+  vertical-align: top;
+  font-family: "Consolas", "monaco", monospace;
+}
+
+.content {
+  color: #211E9C;
+}
+
+th {
+  text-align: center;
+}
+
+.coloring {
+  background: #1313be;
+}
+
+.size {
+  color: #000;
+  text-align: center;
+}
+
+.thheader {
+  color: #1864ab;
+}
+
+/** @format */
+/*
+	this page is for main body colors only
+*/
+.prime {
+  background: #f0ffff;
+}
+
+.top {
+  border: 1px solid #ff8c00;
+}
+
+/**
+ * Margins, paddings etc
+ * @format */
+.sub {
+  padding: 1rem;
+  background: #e1ffff;
+}
+
+/** @format */ /** @format */
+
+/*# sourceMappingURL=main.css.map */
