--- a/assets/sass/abstracts/_maps.scss
+++ b/assets/sass/abstracts/_maps.scss
@@ -7,7 +7,7 @@ $scheme: (
 	light-primary: #c5cae9,
 	primary: #3f51b5,
 	secondarytext: #757575,
-	primarytext: #212121
+	primarytext: #212121,
 );
 
 $vintage: (
@@ -15,7 +15,7 @@ $vintage: (
 	text: #594f43,
 	lt-bg: #bfa68f,
 	accent: #bf877a,
-	sec-text: #593e3e
+	sec-text: #593e3e,
 );
 
 $colors: (
@@ -27,7 +27,7 @@ $colors: (
 	text4: #d3f9d8,
 	text5: #a5d8ff,
 	text6: #efebe9,
-	text7: #e1bee7
+	text7: #e1bee7,
 );
 
 $browncolors: (
@@ -40,7 +40,7 @@ $browncolors: (
 	bg600: #6d4c41,
 	bg700: #5d4037,
 	bg800: #4e342e,
-	bg900: #3e2723
+	bg900: #3e2723,
 );
 
 $purple: (
@@ -51,7 +51,7 @@ $purple: (
 	accnt: #795548,
 	prime-text: #212121,
 	second-text: #757575,
-	divider: #bdbdbd
+	divider: #bdbdbd,
 );
 
 $tea: (
@@ -59,7 +59,7 @@ $tea: (
 	purple: #353369,
 	header: #211e9c,
 	darktan: #423d38,
-	text: #694633
+	text: #694633,
 );
 //from the picture of the katydid on the car
 $katy: (
@@ -67,7 +67,7 @@ $katy: (
 	accent: #2082ff,
 	accent2: #008dff,
 	text: #8aa5dd,
-	secondary: #345469
+	secondary: #345469,
 );
 
 $senae: (
@@ -75,7 +75,7 @@ $senae: (
 	drab: #60553a,
 	orange: #f79b2d,
 	pale: #d9ac85,
-	text: #b07b31
+	text: #b07b31,
 );
 //input sizes
 $map1: (
@@ -84,7 +84,7 @@ $map1: (
 	med: calc(100% / 3),
 	med-lg: calc(100% / 2),
 	large: calc(100% / 1.32),
-	full: 100%
+	full: 100%,
 );
 
 $purpleColor: (
@@ -93,7 +93,7 @@ $purpleColor: (
 	light-primary: #b388ff,
 	primary: #673ab7,
 	secondarytext: #f3e5f5,
-	primarytext: #212121
+	primarytext: #212121,
 );
 
 //material design dark colors
@@ -105,14 +105,14 @@ $dark: (
 	md-blue: #0d47a1,
 	md-cyan: #006064,
 	md-green: #1b5e20,
-	md-orange: #e65100
+	md-orange: #e65100,
 );
 $theme: (
 	main: hsl(320, 41%, 16%),
 	color: #fed9f4,
 	accent: #30997a,
 	secondary: #f99f00,
-	extra: #d75501
+	extra: #d75501,
 );
 
 $greenie: (
@@ -120,7 +120,7 @@ $greenie: (
 	secondary: hsl(87.17, 99.07%, 41.96%),
 	accent: hsl(156.17, 99.05%, 41.37%),
 	text: hsl(79.06, 100%, 50%),
-	color: hsl(150.71, 100%, 50.2%)
+	color: hsl(150.71, 100%, 50.2%),
 );
 
 $brownish: (
@@ -128,7 +128,7 @@ $brownish: (
 	med-dark: hsl(341.11, 44.26%, 23.92%),
 	lt-dark: hsl(340.62, 40.37%, 31.57%),
 	hi-light: hsl(0, 53.25%, 54.71%),
-	real: hsl(35.04, 85.03%, 28.82%)
+	real: hsl(35.04, 85.03%, 28.82%),
 );
 
 $weight: (
@@ -136,7 +136,7 @@ $weight: (
 	bold6: 600,
 	bold7: 700,
 	bold8: 800,
-	bold9: 900
+	bold9: 900,
 );
 
 $Jap: (
@@ -144,7 +144,7 @@ $Jap: (
 	text1: #594f43,
 	accent: #bfa68f,
 	accent2: #bf877a,
-	text2: #593e3e
+	text2: #593e3e,
 );
 
 $orange: (
@@ -153,7 +153,7 @@ $orange: (
 	orange6: #fd7e14,
 	orange7: #f76707,
 	orange8: #e8590c,
-	orange9: #ff5800
+	orange9: #ff5800,
 );
 
 $genie: (
@@ -169,5 +169,11 @@ $genie: (
 	color10: hsl(135, 16%, 57%),
 	color11: hsl(89, 37%, 55%),
 	color12: hsl(109, 75%, 66%),
-	color13: hsl(141, 42%, 64%)
+	color13: hsl(141, 42%, 64%),
+);
+$col-width: (
+	col-1: 20%,
+	col-2: 25%,
+	col-3: 50%,
+	col-4: 75%,
 );
