--- a/assets/sass/layout/_containers.scss
+++ b/assets/sass/layout/_containers.scss
@@ -5,3 +5,71 @@
  */
 
 @use '../abstracts' as *;
+
+.prime {
+	display: grid;
+	grid-gap: 1rem;
+	grid-template-columns: repeat(6, 1fr);
+	grid-template-rows: 0.5fr repeat(4, 1fr);
+	width: 90%;
+	margin: 0 auto;
+	height: 100vh;
+}
+
+.top {
+	grid-column: 1 / 7;
+	@include center(space-around, center);
+	border-radius: 0 0 15px 15px;
+}
+#left-column {
+	grid-column: 1 / 2;
+	grid-row: 2 / 3;
+}
+#main {
+	grid-column: 2 / 7;
+	grid-row: 2 / 3;
+	display: grid;
+	grid-template-columns: subgrid;
+}
+.subg-1 {
+	grid-column: 1 / 4;
+	border: 1px dotted black;
+}
+.subg-2 {
+	grid-column: 4 / 7;
+	border: 1px dotted black;
+}
+
+#recap {
+	grid-column: 1 / 7;
+	grid-row: 3 / 4;
+}
+#main-footer {
+	grid-column: 1 / 7;
+	grid-row: 4 / 5;
+	display: grid;
+	grid-template-columns: subgrid;
+}
+//subgrids to main footer
+.one {
+	grid-column: 1 / 2;
+}
+.two {
+	grid-column: 2 / 3;
+}
+.three {
+	grid-column: 3 / 4;
+}
+.four {
+	grid-column: 4 / 5;
+}
+.five {
+	grid-column: 5 / 6;
+}
+.six {
+	grid-column: 6 / 7;
+}
+.bottoms {
+	grid-column: 1/7;
+	grid-row: 5/6;
+}
