--- a/assets/sass/abstracts/_maps.scss
+++ b/assets/sass/abstracts/_maps.scss
@@ -1,6 +1,15 @@
 /** @format */
 
 //maps
+
+$saddle: (
+	background: #8c4614,
+	accent: #bf8308,
+	text: #f2cd83,
+	gray-green: #3c9987,
+	greenish: #08bf68,
+);
+
 $scheme: (
 	darkprimary: #303f9f,
 	accent: #cddc39,
