--- a/assets/sass/abstracts/_named-colors.sass
+++ b/assets/sass/abstracts/_named-colors.sass
@@ -2,7 +2,7 @@ $aliceblue     :	#f0f8ff
 $antiquewhite  : 	#faebd7
 $aqua          :	#00ffff
 $aquamarine    :	#7fffd4
-$azure         :	#f0ffff
+$azure         :	#F0FFFF
 $bisque        :	#ffe4c4
 $black         :	#000000
 $blanchedalmond:	#ffebcd
