--- a/assets/sass/classes/_lists.sass
+++ b/assets/sass/classes/_lists.sass
@@ -2,6 +2,14 @@
 
 @use '../abstracts' as *
 
+ul
+	margin-left: 0
+	padding-left: 0
+
+li
+	list-style: none
+	padding: .25rem .5rem
+
 .item
 	padding-right: 1rem
 	font-size: $font-size-base + 2
