--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -400,6 +400,16 @@ label {
 }
 
 /*list properties */
+ul {
+  margin-left: 0;
+  padding-left: 0;
+}
+
+li {
+  list-style: none;
+  padding: 0.25rem 0.5rem;
+}
+
 .item {
   padding-right: 1rem;
   font-size: 18px;
@@ -457,11 +467,31 @@ label {
   color: #140FA9 !important;
 }
 
-.white {
-  color: #f5f5f5;
+/**
+ * main color themes
+ * @format
+ * */
+/** this page is for main body colors only */
+.prime {
+  background: #c5c3fa;
 }
 
-/* main theme colors */
+.top {
+  border: 1px solid #ff8c00;
+}
+
+.header-title {
+  color: #a4a90f;
+}
+
+.white {
+  background: #140FA9;
+}
+
+#left-column {
+  background: #db992a;
+}
+
 .dark {
   background-color: #381B6C;
   color: white;
@@ -515,6 +545,20 @@ label {
 #recap {
   grid-column: 1/7;
   grid-row: 3/4;
+  display: grid;
+  grid-template-columns: subgrid;
+}
+
+.recap-grid1 {
+  grid-column: 1/3;
+}
+
+.recap-grid2 {
+  grid-column: 3/5;
+}
+
+.recap-grid3 {
+  grid-column: 5/7;
 }
 
 #main-footer {
@@ -551,6 +595,20 @@ label {
 .bottoms {
   grid-column: 1/7;
   grid-row: 5/6;
+  display: grid;
+  grid-template-columns: subgrid;
+}
+
+.bottom-grid1 {
+  grid-column: 1/3;
+}
+
+.bottom-grid2 {
+  grid-column: 3/5;
+}
+
+.bottom-grid3 {
+  grid-column: 5/7;
 }
 
 /* Calendar if needed */
@@ -603,24 +661,18 @@ th {
   color: #1864ab;
 }
 
-/** @format */
-/*
-	this page is for main body colors only
-*/
-.prime {
-  background: #f0ffff;
-}
-
-.top {
-  border: 1px solid #ff8c00;
-}
-
-/**
+/** @format */ /**
  * Margins, paddings etc
  * @format */
 .sub {
   padding: 1rem;
   background: #e1ffff;
+  border: 1px solid #0f0000;
+}
+
+#left-column {
+  border: solid 1px #140FA9;
+  padding: 1rem;
 }
 
 /** @format */ /** @format */
