--- a/assets/sass/layout/_containers.scss
+++ b/assets/sass/layout/_containers.scss
@@ -43,6 +43,18 @@
 #recap {
 	grid-column: 1 / 7;
 	grid-row: 3 / 4;
+	display: grid;
+	grid-template-columns: subgrid;
+}
+
+.recap-grid1 {
+	grid-column: 1/3;
+}
+.recap-grid2 {
+	grid-column: 3/5;
+}
+.recap-grid3 {
+	grid-column: 5/7;
 }
 #main-footer {
 	grid-column: 1 / 7;
@@ -72,4 +84,15 @@
 .bottoms {
 	grid-column: 1/7;
 	grid-row: 5/6;
+	display: grid;
+	grid-template-columns: subgrid;
+}
+.bottom-grid1 {
+	grid-column: 1/3;
+}
+.bottom-grid2 {
+	grid-column: 3/5;
+}
+.bottom-grid3 {
+	grid-column: 5/7;
 }
