Updating Hober page

--- a/application/views/menus/menu.html
+++ b/application/views/menus/menu.html
@@ -4,7 +4,7 @@
 	<ul class="header-menu">
 		<li class="item upper"><a href="http://oblivion/">Oblivion</a></li>
 		<li class="item upper">
-			<a href="http://oblivion/pages/wilson">MrWilson</a>
+			<a href="http://oblivion/pages/wilson">Hober Mallow</a>
 		</li>
 	</ul>
 </span>
