--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -1,5 +1,6 @@
 $green-blue: hsl(197, 55%, 55%)
-
+$created: rgb(186,112,78)
+$created1: rgb(9,40,238)
 
 //very peri color scheme
 $very-peri      : #6868AC
