--- a/assets/sass/colors/_colors.sass
+++ b/assets/sass/colors/_colors.sass
@@ -3,3 +3,7 @@
 .dark
 	background-color: $purp11
 	color: white
+
+.design-color
+	color: rgb(201,174,20)
+	text-shadow: 2px 2px 3px orange, -2px -2px 3px black
