--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,8 +15,7 @@
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* Remove default margin */
@@ -46,8 +45,7 @@ html:focus-within {
 /* Set core body defaults */
 /* A elements that don't have a class get default styles */
 a:not([class]) {
-  -webkit-text-decoration-skip: ink;
-          text-decoration-skip-ink: auto;
+  text-decoration-skip-ink: auto;
 }
 
 /* Make images easier to work with */
@@ -73,20 +71,16 @@ select {
   *,
   *::before,
   *::after {
-    -webkit-animation-duration: 0.01ms !important;
-            animation-duration: 0.01ms !important;
-    -webkit-animation-iteration-count: 1 !important;
-            animation-iteration-count: 1 !important;
-    -webkit-transition-duration: 0.01ms !important;
-            transition-duration: 0.01ms !important;
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
 }
 /* body */
 html,
 body {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
@@ -207,8 +201,7 @@ button {
 button:hover {
   background: #6495ed;
   color: #36013f;
-  -webkit-box-shadow: 2px 2px 2px #7073e2;
-          box-shadow: 2px 2px 2px #7073e2;
+  box-shadow: 2px 2px 2px #7073e2;
 }
 
 form {
@@ -488,10 +481,6 @@ li {
  * @format
  * */
 /** this page is for main body colors only */
-.prime {
-  background: #c5c3fa;
-}
-
 .top {
   border: 1px solid #ff8c00;
 }
@@ -508,9 +497,18 @@ li {
   background: #db992a;
 }
 
+body {
+  background-image: linear-gradient(to right, #ffece0, #80bfbf, #aa7e64, #368080);
+}
+
 .dark {
   background-color: #381B6C;
   color: white;
+}
+
+.design-color {
+  color: rgb(201, 174, 20);
+  text-shadow: 2px 2px 3px orange, -2px -2px 3px black;
 }
 
 /**
@@ -519,297 +517,111 @@ li {
  * @format
  */
 .prime {
-  display: -ms-grid;
   display: grid;
   grid-gap: 1rem;
-  -ms-grid-columns: 1fr 1rem 1fr 1rem 1fr 1rem 1fr 1rem 1fr 1rem 1fr;
   grid-template-columns: repeat(6, 1fr);
-  -ms-grid-rows: 0.5fr 1rem 1fr 1rem 1fr 1rem 1fr 1rem 1fr;
   grid-template-rows: 0.5fr repeat(4, 1fr);
   width: 90%;
   margin: 0 auto;
   height: 100vh;
 }
-.prime > *:nth-child(1) {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-}
-.prime > *:nth-child(2) {
-  -ms-grid-row: 1;
-  -ms-grid-column: 3;
-}
-.prime > *:nth-child(3) {
-  -ms-grid-row: 1;
-  -ms-grid-column: 5;
-}
-.prime > *:nth-child(4) {
-  -ms-grid-row: 1;
-  -ms-grid-column: 7;
-}
-.prime > *:nth-child(5) {
-  -ms-grid-row: 1;
-  -ms-grid-column: 9;
-}
-.prime > *:nth-child(6) {
-  -ms-grid-row: 1;
-  -ms-grid-column: 11;
-}
-.prime > *:nth-child(7) {
-  -ms-grid-row: 3;
-  -ms-grid-column: 1;
-}
-.prime > *:nth-child(8) {
-  -ms-grid-row: 3;
-  -ms-grid-column: 3;
-}
-.prime > *:nth-child(9) {
-  -ms-grid-row: 3;
-  -ms-grid-column: 5;
-}
-.prime > *:nth-child(10) {
-  -ms-grid-row: 3;
-  -ms-grid-column: 7;
-}
-.prime > *:nth-child(11) {
-  -ms-grid-row: 3;
-  -ms-grid-column: 9;
-}
-.prime > *:nth-child(12) {
-  -ms-grid-row: 3;
-  -ms-grid-column: 11;
-}
-.prime > *:nth-child(13) {
-  -ms-grid-row: 5;
-  -ms-grid-column: 1;
-}
-.prime > *:nth-child(14) {
-  -ms-grid-row: 5;
-  -ms-grid-column: 3;
-}
-.prime > *:nth-child(15) {
-  -ms-grid-row: 5;
-  -ms-grid-column: 5;
-}
-.prime > *:nth-child(16) {
-  -ms-grid-row: 5;
-  -ms-grid-column: 7;
-}
-.prime > *:nth-child(17) {
-  -ms-grid-row: 5;
-  -ms-grid-column: 9;
-}
-.prime > *:nth-child(18) {
-  -ms-grid-row: 5;
-  -ms-grid-column: 11;
-}
-.prime > *:nth-child(19) {
-  -ms-grid-row: 7;
-  -ms-grid-column: 1;
-}
-.prime > *:nth-child(20) {
-  -ms-grid-row: 7;
-  -ms-grid-column: 3;
-}
-.prime > *:nth-child(21) {
-  -ms-grid-row: 7;
-  -ms-grid-column: 5;
-}
-.prime > *:nth-child(22) {
-  -ms-grid-row: 7;
-  -ms-grid-column: 7;
-}
-.prime > *:nth-child(23) {
-  -ms-grid-row: 7;
-  -ms-grid-column: 9;
-}
-.prime > *:nth-child(24) {
-  -ms-grid-row: 7;
-  -ms-grid-column: 11;
-}
-.prime > *:nth-child(25) {
-  -ms-grid-row: 9;
-  -ms-grid-column: 1;
-}
-.prime > *:nth-child(26) {
-  -ms-grid-row: 9;
-  -ms-grid-column: 3;
-}
-.prime > *:nth-child(27) {
-  -ms-grid-row: 9;
-  -ms-grid-column: 5;
-}
-.prime > *:nth-child(28) {
-  -ms-grid-row: 9;
-  -ms-grid-column: 7;
-}
-.prime > *:nth-child(29) {
-  -ms-grid-row: 9;
-  -ms-grid-column: 9;
-}
-.prime > *:nth-child(30) {
-  -ms-grid-row: 9;
-  -ms-grid-column: 11;
-}
 
 .top {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 6;
   grid-column: 1/7;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-around;
+  align-items: center;
   border-radius: 0 0 15px 15px;
 }
 
 #left-column {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
   grid-column: 1/2;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
   grid-row: 2/3;
 }
 
 #main {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 5;
   grid-column: 2/7;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
   grid-row: 2/3;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: subgrid;
   grid-template-columns: subgrid;
 }
 
 .subg-1 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
   grid-column: 1/4;
   border: 1px dotted black;
 }
 
 .subg-2 {
-  -ms-grid-column: 4;
-  -ms-grid-column-span: 3;
   grid-column: 4/7;
   border: 1px dotted black;
 }
 
 #recap {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 6;
   grid-column: 1/7;
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 1;
   grid-row: 3/4;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: subgrid;
   grid-template-columns: subgrid;
 }
 
 .recap-grid1 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-column: 1/3;
 }
 
 .recap-grid2 {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 2;
   grid-column: 3/5;
 }
 
 .recap-grid3 {
-  -ms-grid-column: 5;
-  -ms-grid-column-span: 2;
   grid-column: 5/7;
 }
 
 #main-footer {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 6;
   grid-column: 1/7;
-  -ms-grid-row: 4;
-  -ms-grid-row-span: 1;
   grid-row: 4/5;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: subgrid;
   grid-template-columns: subgrid;
 }
 
 .one {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
   grid-column: 1/2;
 }
 
 .two {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
   grid-column: 2/3;
 }
 
 .three {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 1;
   grid-column: 3/4;
 }
 
 .four {
-  -ms-grid-column: 4;
-  -ms-grid-column-span: 1;
   grid-column: 4/5;
 }
 
 .five {
-  -ms-grid-column: 5;
-  -ms-grid-column-span: 1;
   grid-column: 5/6;
 }
 
 .six {
-  -ms-grid-column: 6;
-  -ms-grid-column-span: 1;
   grid-column: 6/7;
 }
 
 .bottoms {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 6;
   grid-column: 1/7;
-  -ms-grid-row: 5;
-  -ms-grid-row-span: 1;
   grid-row: 5/6;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: subgrid;
   grid-template-columns: subgrid;
 }
 
 .bottom-grid1 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-column: 1/3;
 }
 
 .bottom-grid2 {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 2;
   grid-column: 3/5;
 }
 
 .bottom-grid3 {
-  -ms-grid-column: 5;
-  -ms-grid-column-span: 2;
   grid-column: 5/7;
 }
 
@@ -868,7 +680,7 @@ th {
  * @format */
 .sub {
   padding: 1rem;
-  background: #e1ffff;
+  background: #e0ffff;
   border: 1px solid #0f0000;
 }
 
@@ -877,4 +689,14 @@ th {
   padding: 1rem;
 }
 
+.sub1 {
+  padding: 1rem;
+  background: #80bfbf;
+  border: 1px solid #0f0000;
+  outline-style: inset;
+  outline-width: 6px;
+}
+
 /** @format */ /** @format */
+
+/*# sourceMappingURL=main.css.map */
