--- a/application/views/menus/menu.html
+++ b/application/views/menus/menu.html
@@ -6,5 +6,8 @@
 		<li class="item upper">
 			<a href="http://oblivion/pages/wilson">Hober Mallow</a>
 		</li>
+		<li class="item upper">
+			<a href="http://oblivion/pages/updates">Updates</a>
+		</li>
 	</ul>
 </span>
