--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -12,7 +12,8 @@ $lotus          : #E3C1BE
 $muted-clay     : #D3927D
 $dried-moss     : #CDB97D
 
-
+$base-yellow: rgb(247,202,114)
+$pleasant-orange: rgb(242,135,56)
 $orange-one: hsl(31, 97%, 44%)
 $dull-orange: hsl(38,97%,42%)
 $corn-orange: hsl(22, 95%, 42%)
