--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -625,6 +625,37 @@ body {
   grid-column: 5/7;
 }
 
+/*===============================================
+*            Updates page containers            *
+===============================================*/
+#updates {
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 0.25fr 0.25fr repeat(2, 1fr);
+  width: 90%;
+  margin: 0 auto;
+  height: 100vh;
+}
+
+.update-display {
+  grid-column: 2/7;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+.update-title {
+  grid-column: 1/7;
+  grid-row: 2/3;
+  padding: 0;
+  margin: 0;
+}
+
+#left-columns {
+  grid-column: 1/2;
+  grid-row: 3/5;
+}
+
 /* Calendar if needed */
 .calendar {
   background: #CFC79E;
