--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -12,6 +12,7 @@ $lotus          : #E3C1BE
 $muted-clay     : #D3927D
 $dried-moss     : #CDB97D
 
+$base-orange: rgb(215,134,19)
 $base-yellow: rgb(247,202,114)
 $pleasant-orange: rgb(242,135,56)
 $orange-one: hsl(31, 97%, 44%)
