--- a/assets/sass/colors/_colors.sass
+++ b/assets/sass/colors/_colors.sass
@@ -7,3 +7,9 @@
 .design-color
 	color: rgb(201,174,20)
 	text-shadow: 2px 2px 3px orange, -2px -2px 3px black
+
+#datey,
+.copy,
+.project,
+.color-display
+	background-color: $base-yellow
