--- a/assets/sass/abstracts/_maps.scss
+++ b/assets/sass/abstracts/_maps.scss
@@ -1,6 +1,13 @@
 /** @format */
 
 //maps
+$test: (
+	text: #8e4713,
+	background: #85b5ed,
+	primary: #12159a,
+	secondary: #f3b1f7,
+	accent: #d51a2d,
+);
 
 $random: (
 	text: #ffffff,
