--- a/assets/sass/basics/_elements.sass
+++ b/assets/sass/basics/_elements.sass
@@ -2,8 +2,10 @@
 @use '../abstracts' as *
 p
 	margin-top: .75rem
+	margin-left: 1rem
+	margin-right: 1rem
 
 blockquote
 	margin-left: 2rem
-	border-left: 1px solid $chocolate
+	border-left: 2px solid $chocolate
 	padding-left: 1rem
