--- a/assets/sass/layout/_containers.scss
+++ b/assets/sass/layout/_containers.scss
@@ -104,7 +104,7 @@
 	display: grid;
 	grid-gap: 1rem;
 	grid-template-columns: repeat(6, 1fr);
-	grid-template-rows: 0.25fr 0.25fr repeat(2, 1fr);
+	//grid-template-rows: 0.25fr 0.25fr repeat(2, 1fr);
 	width: 90%;
 	margin: 0 auto;
 	height: 100vh;
