--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -14,6 +14,7 @@ $dried-moss     : #CDB97D
 
 
 $base-red: #673047
+$b-orange: rgb(242,184,43)
 $base-orange: rgb(215,134,19)
 $base-yellow: rgb(247,202,114)
 $pleasant-orange: rgb(242,135,56)
