--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -11,7 +11,14 @@ $burnished-lilac: #C6AAAF
 $lotus          : #E3C1BE
 $muted-clay     : #D3927D
 $dried-moss     : #CDB97D
-
+$pullman-brown : #644117
+$seal-brown    : #321414
+$brown         : #a52a2a
+$dark-siena: #3c1414
+$black-bean: #3d0c02
+$sandy-brown: #f4a460
+$peach-yellow: #fadfad
+$tumbleweed: #deaa88
 
 $base-red: #673047
 $b-orange: rgb(242,184,43)
