--- a/assets/sass/colors/_colors.sass
+++ b/assets/sass/colors/_colors.sass
@@ -5,11 +5,18 @@
 	color: white
 
 .design-color
-	color: rgb(201,174,20)
-	text-shadow: 2px 2px 3px orange, -2px -2px 3px black
+	color: $black-bean
+	text-shadow: 2px 2px 3px orange
 
 #datey,
 .copy,
 .project,
 .color-display
 	background-color: $base-yellow
+
+.sub1,#left-column
+	color: #e0ffff
+	background: $black-bean
+
+.sub
+	background: $tumbleweed
