--- a/assets/sass/basics/_forms.sass
+++ b/assets/sass/basics/_forms.sass
@@ -48,6 +48,9 @@ textarea
 
 input:user-invalid
 	border-color: red
+	&:has(+ input:user-invalid):after
+		content: " ❌"
+
 
 input:user-valid
 	border-color: green
