--- a/application/views/menus/menu.html
+++ b/application/views/menus/menu.html
@@ -2,9 +2,11 @@
 <span class="header-title"><?php echo $header;?></span>
 <span>
 	<ul class="header-menu">
-		<li class="item upper"><a href="http://oblivion/">Oblivion</a></li>
 		<li class="item upper">
-			<a href="http://oblivion/pages/wilson">Hober Mallow</a>
+			<a href="http://oblivion/">Oblivion</a>
+		</li>
+		<li class="item upper">
+			<a href="http:///oblivion/pages/wilson">Hober Mallow</a>
 		</li>
 		<li class="item upper">
 			<a href="http://oblivion/pages/updates">Updates</a>
